--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,15 +46,15 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\CameraFollow.cs" />
-     <Compile Include="Assets\Scripts\Goblin\AttackLeft.cs" />
-     <Compile Include="Assets\Scripts\Goblin\SimpleEnemyAI.cs" />
-     <Compile Include="Assets\Scripts\GuiManager.cs" />
-     <Compile Include="Assets\Scripts\Health.cs" />
-     <Compile Include="Assets\Scripts\MainMenu.cs" />
-     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
-     <Compile Include="Assets\Scripts\npc\NPC.cs" />
-     <Compile Include="Assets\Scripts\objects\Chest.cs" />
+     <Compile Include="Assets\Scripts\Enemy\AttackLeft.cs" />
+     <Compile Include="Assets\Scripts\Enemy\SimpleEnemyAI.cs" />
+     <Compile Include="Assets\Scripts\Misc\CameraFollow.cs" />
+     <Compile Include="Assets\Scripts\Misc\GuiManager.cs" />
+     <Compile Include="Assets\Scripts\Misc\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\NPC\NPC.cs" />
+     <Compile Include="Assets\Scripts\Objects\Chest.cs" />
+     <Compile Include="Assets\Scripts\Player\Health.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TileAnimator.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TiledMap.cs" />
