--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Dungeon\my Dungeon\CavernGenerator.cs" />
+     <Compile Include="Assets\Scripts\Dungeon\my Dungeon\MapCreator.cs" />
+     <Compile Include="Assets\Scripts\Dungeon\my Dungeon\Space.cs" />
+     <Compile Include="Assets\Scripts\Dungeon\my Dungeon\Tile.cs" />
      <Compile Include="Assets\Scripts\Enemy\AttackLeft.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyHealth.cs" />
      <Compile Include="Assets\Scripts\Enemy\SimpleEnemyAI.cs" />
