--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,13 +52,18 @@
      <Compile Include="Assets\Scripts\Dungeon\Cavern\Tile.cs" />
      <Compile Include="Assets\Scripts\Dungeon\EnterDungeone.cs" />
      <Compile Include="Assets\Scripts\Dungeon\EnterDungeoneHardMode.cs" />
+     <Compile Include="Assets\Scripts\Enemy\EnemyHealth.cs" />
+     <Compile Include="Assets\Scripts\Enemy\EnemyStats.cs" />
+     <Compile Include="Assets\Scripts\Enemy\ExplosionAttackAI.cs" />
+     <Compile Include="Assets\Scripts\Enemy\FireballAI.cs" />
+     <Compile Include="Assets\Scripts\Enemy\MoveToPlayer.cs" />
+     <Compile Include="Assets\Scripts\Enemy\RangeAttackAI.cs" />
+     <Compile Include="Assets\Scripts\Enemy\SimpleEnemyAI.cs" />
      <Compile Include="Assets\Scripts\Misc\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\Misc\ChestGenerator.cs" />
-     <Compile Include="Assets\Scripts\Misc\Directions.cs" />
      <Compile Include="Assets\Scripts\Misc\GamePause.cs" />
      <Compile Include="Assets\Scripts\Misc\GuiManager.cs" />
      <Compile Include="Assets\Scripts\Misc\MainMenu.cs" />
-     <Compile Include="Assets\Scripts\Misc\RangedAttack.cs" />
      <Compile Include="Assets\Scripts\Misc\Scaler.cs" />
      <Compile Include="Assets\Scripts\Player\FireBall.cs" />
      <Compile Include="Assets\Scripts\Player\Health.cs" />
